fixed spelling error in compose file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       - "27017:27017"
     environment:
       MONGO_INITDB_ROOT_USERNAME: admin
-      MONGO_INITDB_ROOT_PASSWORD: admin#
+      MONGO_INITDB_ROOT_PASSWORD: admin
   rest-api:
     image: rest-api
     restart: always
