--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "survey-test-api",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.ts",
   "scripts": {
-    "start": "tsc && nodemon --unhandled-rejections=strict ./dist/app.js",
+    "start": "npm run clean && tsc && nodemon --unhandled-rejections=strict",
     "debug": "export DEBUG=* && npm run start",
+    "build": "npm run clean && tsc",
+    "clean": "rimraf ./dist",
     "lint": "eslint .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -22,11 +24,12 @@
     "helmet": "^6.0.1",
     "jsonwebtoken": "^9.0.0",
     "mime-types": "^2.1.35",
-    "mongoose": "^7.0.2",
+    "mongoose": "^7.3.3",
     "multer": "^1.4.5-lts.1",
     "source-map-support": "^0.5.21",
     "uuid": "^9.0.0",
-    "winston": "^3.8.2"
+    "winston": "^3.8.2",
+    "ws": "^8.16.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
@@ -36,13 +39,15 @@
     "@types/mime-types": "^2.1.1",
     "@types/multer": "^1.4.7",
     "@types/uuid": "^9.0.1",
+    "@types/ws": "^8.5.10",
     "@typescript-eslint/eslint-plugin": "^5.55.0",
     "@typescript-eslint/parser": "^5.55.0",
     "eslint": "^8.36.0",
     "eslint-config-prettier": "^8.7.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "nodemon": "^2.0.22",
+    "nodemon": "^3.0.1",
     "prettier": "^2.8.4",
+    "rimraf": "^5.0.5",
     "typescript": "^5.0.2"
   }
 }
