--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,9 @@
     "outDir": "./dist",
     "strict": true,
     "esModuleInterop": true,
-    "inlineSourceMap": true
-  }
+    "moduleResolution": "node",
+  },
+  "exclude": [
+    "node_modules"
+  ]
 }
