--- a/deployment/docker/compose/docker-compose.yml
+++ b/deployment/docker/compose/docker-compose.yml
@@ -22,6 +22,7 @@ services:
     environment:
       # general
       DEBUG: "app:*"
+      META: false
       PORT: 5000
       # database
       DATABASE_HOST: mongo
