--- a/deployment/docker/nginx/http.d/default.conf
+++ b/deployment/docker/nginx/http.d/default.conf
@@ -1,5 +1,16 @@
+upstream websocket {
+  server localhost:5000;
+}
+
 server {
   listen 80;
+
+  location /ws/ {
+    proxy_pass http://websocket$uri;
+    proxy_http_version 1.1;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection "upgrade";
+  }
 
   location / {
 	proxy_pass http://localhost:5000;
