add push git-workflow

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -12,5 +12,5 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 18
-      - run: npm ci
+      - run: npm ci --no-fund
       - run: npm run build
