improve env vars

--- a/.env.template
+++ b/.env.template
@@ -1,27 +1,49 @@
-# general
-DEBUG=
-META=
-PORT=
-# delay
-ARTIFICIAL_DELAY=
-# database
-DATABASE_DB=
-DATABASE_HOST=
-DATABASE_PORT=
-DATABASE_USER=
-DATABASE_PASSWORD=
-# authentication
-ACCESS_TOKEN_SECRET=
-ACCESS_TOKEN_EXPIRATION=
-REFRESH_TOKEN_SECRET=
-REFRESH_TOKEN_EXPIRATION=
-# paging
-MAX_PER_PAGE=
-# aws
-AWS_REGION=
-AWS_API_VERSION=
+# <--- GENERAL --->
+# logging-debug configuration, based on https://www.npmjs.com/package/debug
+DEBUG=app:*,express:false
+# log meta data of requests
+META=true
+# port of the server
+PORT=5000
+# artificial delay to add to each web-request before propagating (development purpose only)
+ARTIFICIAL_DELAY=-1
+
+# <--- DATABASE (MongoDB) --->
+# database to use
+DATABASE_DB=test-db
+# database host
+DATABASE_HOST=127.0.0.1
+# port of the database
+DATABASE_PORT=27017
+# user of for the database
+DATABASE_USER=test-user
+# password for the databse user
+DATABASE_PASSWORD=password
+
+# <--- AUTHENTICATION --->
+# secret for JWT access token
+ACCESS_TOKEN_SECRET=access_token_dummy
+# expiration timeout (seconds) for the JWT access token
+ACCESS_TOKEN_EXPIRATION=3600
+# secret for JWT refresh token
+REFRESH_TOKEN_SECRET=refresh_token_dummy
+# expiration timeout (seconds) for the JWT refresh token
+REFRESH_TOKEN_EXPIRATION=86400
+
+# <--- PAGING --->
+# max elements allowed to return for GET requests (if paging used)
+MAX_PER_PAGE=30
+
+# <--- AWS S3 BUCKET --->
+# used aws region
+AWS_REGION=eu-north-1
+# used aws api version
+AWS_API_VERSION=2006-03-01
+# aws access key id
 AWS_ACCESS_KEY_ID=
+# aws access key secret
 AWS_SECRET_ACCESS_KEY=
+# aws bucket name
 AWS_BUCKET_NAME=
-# answer-pictures
-ALLOWED_MIME_TYPES=
+# allowed mimetypes for the S3 bucket (normally pictures only)
+ALLOWED_MIME_TYPES=image/png;image/jpeg
