--- a/deployment/docker/compose/docker-compose.development.yml
+++ b/deployment/docker/compose/docker-compose.development.yml
@@ -11,6 +11,7 @@ services:
     environment:
       MONGO_INITDB_ROOT_USERNAME: admin
       MONGO_INITDB_ROOT_PASSWORD: admin
+      MONGO_INITDB_DATABASE: test
   rest-api:
     image: rest-api
     build:
@@ -26,7 +27,6 @@ services:
       DEBUG: "app:*,express:false"
       META: false
       PORT: 5000
-      # artificial delay
       ARTIFICIAL_DELAY: -1
       # database
       DATABASE_HOST: mongo
