--- a/package.json
+++ b/package.json
@@ -51,5 +51,8 @@
     "rimraf": "^5.0.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.0.2"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
