--- a/deployment/docker/compose/docker-compose.yml
+++ b/deployment/docker/compose/docker-compose.yml
@@ -35,9 +35,9 @@ services:
       DATABASE_PASSWORD: admin
       DATABASE_DB: test
       # authentication
-      ACCESS_TOKEN_SECRET: access_1234
+      ACCESS_TOKEN_SECRET: access_token_dummy
       ACCESS_TOKEN_EXPIRATION: 3600
-      REFRESH_TOKEN_SECRET: refresh_1234
+      REFRESH_TOKEN_SECRET: refresh_token_dummy
       REFRESH_TOKEN_EXPIRATION: 86400
       # paging
-      MAX_PER_PAGE: 10
+      MAX_PER_PAGE: 30
