--- a/deployment/docker/compose/docker-compose.yml
+++ b/deployment/docker/compose/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     image: mongo
     restart: always
     volumes:
+      - ../mongo/mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js:ro
       - ../../../data:/data/db
     ports:
       - "27017:27017"
