--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -1,4 +1,4 @@
-name: Tag - Build Docker & Publish Image
+name: Tag - Build & Publish Docker Image
 
 on:
   push:
@@ -12,12 +12,17 @@ jobs:
     env:
       REPO: ${{ secrets.DOCKER_REGISTRY }}/${{ secrets.DOCKER_REPOSITORY }}
     steps:
+      - name: Get Tag Name
+        id: get_tag_name
+        run: echo ::set-output name=VERSION::${GITHUB_REF/refs\/tags\//}
       - name: Checkout Repository
         uses: actions/checkout@v4
+        with:
+          ref: ${{ steps.get_tag_name.outputs.VERSION }}
       - name: Login to Docker Registry
         run: docker login ${{ secrets.DOCKER_REGISTRY }} -u ${{ secrets.DOCKER_USERNAME }}
           -p ${{ secrets.DOCKER_PASSWORD }}
       - name: Build Docker Image
-        run: docker build -t $REPO:${GITHUB_REF_NAME} -t $REPO:latest .
+        run: docker build -t $REPO:${{ steps.get_tag_name.outputs.VERSION }} -t $REPO:latest .
       - name: Publish Docker Image
         run: docker push $REPO
