--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
       - name: Get Tag Name
         id: get_tag_name
-        run: echo ::set-output name=VERSION::${GITHUB_REF/refs\/tags\//}
+        run: echo "VERSION=${GITHUB_REF/refs\/tags\//}"
       - name: Checkout Repository
         uses: actions/checkout@v4
         with:
@@ -23,6 +23,6 @@ jobs:
         run: docker login ${{ secrets.DOCKER_REGISTRY }} -u ${{ secrets.DOCKER_USERNAME }}
           -p ${{ secrets.DOCKER_PASSWORD }}
       - name: Build Docker Image
-        run: docker build -t $REPO:${{ steps.get_tag_name.outputs.VERSION }} -t $REPO:latest .
+        run: docker build -t $REPO:latest -t $REPO:${{ steps.get_tag_name.outputs.VERSION }} .
       - name: Publish Docker Image
         run: docker push $REPO
