--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
       - name: Get Tag Name
         id: get_tag_name
-        run: echo "VERSION=${GITHUB_REF/refs\/tags\//}"
+        run: echo "VERSION=${GITHUB_REF/refs\/tags\//}" >> $GITHUB_OUTPUT
       - name: Checkout Repository
         uses: actions/checkout@v4
         with:
