--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -22,3 +22,9 @@ jobs:
         run: npm ci --no-fund
       - name: Build Node App
         run: npm run build
+      - name: Upload Build Assets
+        uses: actions/upload-artifact@v4
+        with:
+          name: build
+          path: dist
+          retention-days: 3
