--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -25,6 +25,6 @@ jobs:
       - name: Upload Build Assets
         uses: actions/upload-artifact@v4
         with:
-          name: build
+          name: build-output
           path: dist
           retention-days: 3
