--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -1,4 +1,4 @@
-name: Tag - Build & Publish Docker Image
+name: Tag - Build & Publish Tag Docker Image
 
 on:
   push:
@@ -23,6 +23,6 @@ jobs:
         run: docker login ${{ secrets.DOCKER_REGISTRY }} -u ${{ secrets.DOCKER_USERNAME }}
           -p ${{ secrets.DOCKER_PASSWORD }}
       - name: Build Docker Image
-        run: docker build -t $REPO:${{ steps.get_tag_name.outputs.VERSION }} .
+        run: docker build -t $REPO:tag-${{ steps.get_tag_name.outputs.VERSION }} .
       - name: Publish Docker Image
-        run: docker push $REPO:${{ steps.get_tag_name.outputs.VERSION }}
+        run: docker push $REPO:tag-${{ steps.get_tag_name.outputs.VERSION }}
