update docker configuration

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -1,4 +1,4 @@
-name: Push - Build
+name: Push
 
 on:
   push:
@@ -26,5 +26,5 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: build-output
-          path: dist
+          path: build
           retention-days: 3
