--- a/deployment/docker/supervisor/supervisor.node.conf
+++ b/deployment/docker/supervisor/supervisor.node.conf
@@ -1,6 +1,6 @@
 [program:node]
 directory=/home/www/node/
-command=node ./dist/app.js
+command=node ./build/app.js
 autostart=true
 autorestart=true
 stdout_logfile=/dev/stdout
