--- a/deployment/docker/compose/docker-compose.yml
+++ b/deployment/docker/compose/docker-compose.yml
@@ -1,44 +1,26 @@
-version: '3.8'
-name: survey-test-api
+name: survey-test-backend
 services:
   mongo:
-    image: mongo
+    image: mongo:latest
     restart: always
-    volumes:
-      - ../mongo/mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js:ro
-      - ../../../data:/data/db
     ports:
       - "27017:27017"
     environment:
       MONGO_INITDB_ROOT_USERNAME: admin
       MONGO_INITDB_ROOT_PASSWORD: admin
       MONGO_INITDB_DATABASE: test
+    volumes:
+      - ../mongo/mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js:ro
+      - ../../../data:/data/db
   rest-api:
-    image: rest-api
+    image: survey-test-api:latest
     build:
       context: ../../..
       dockerfile: Dockerfile
-      args:
-        INTEGRATE_NGINX: "false"
     restart: always
     ports:
-      - "5000:5000"
-    environment:
-      # general
-      DEBUG: "app:*,express:false"
-      META: false
-      PORT: 5000
-      ARTIFICIAL_DELAY: -1
-      # database
-      DATABASE_HOST: mongo
-      DATABASE_PORT: 27017
-      DATABASE_USER: admin
-      DATABASE_PASSWORD: admin
-      DATABASE_DB: test
-      # authentication
-      ACCESS_TOKEN_SECRET: access_token_dummy
-      ACCESS_TOKEN_EXPIRATION: 3600
-      REFRESH_TOKEN_SECRET: refresh_token_dummy
-      REFRESH_TOKEN_EXPIRATION: 86400
-      # paging
-      MAX_PER_PAGE: 30
+      - "5000:80"
+    volumes:
+      # IMPORTANT: database host needs to be 'mongo' to connect to dockerized MongoDB
+      - ../../../.env.docker:/home/www/node/build/.env
+
