--- a/deployment/docker/nginx/default.conf
+++ b/deployment/docker/nginx/default.conf
@@ -1,4 +1,4 @@
-upstream websocket {
+upstream api {
   server localhost:5000;
 }
 
@@ -6,13 +6,13 @@ server {
   listen 80;
 
   location /ws/ {
-    proxy_pass http://websocket$uri;
+    proxy_pass http://api$uri;
     proxy_http_version 1.1;
     proxy_set_header Upgrade $http_upgrade;
     proxy_set_header Connection "upgrade";
   }
 
   location / {
-	proxy_pass http://localhost:5000;
+	proxy_pass http://api;
   }
 }
