--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "",
   "main": "app.ts",
   "scripts": {
-    "start": "npm run clean && tsc && node dist/app.js",
+    "start": "npm run clean && tsc && node build/app.js",
     "dev": "nodemon --unhandled-rejections=strict",
     "debug": "export DEBUG=* && npm run dev",
     "build": "npm run clean && tsc",
-    "clean": "rimraf ./dist",
+    "clean": "rimraf ./build",
     "lint": "eslint .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
