--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "nils.krtm",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.299.0",
+    "@react-email/render": "^0.0.15",
     "argon2": "^0.30.3",
     "cors": "^2.8.5",
     "debug": "^4.3.4",
@@ -27,6 +28,7 @@
     "mime-types": "^2.1.35",
     "mongoose": "^7.3.3",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.13",
     "source-map-support": "^0.5.21",
     "uuid": "^9.0.0",
     "winston": "^3.8.2",
@@ -39,6 +41,7 @@
     "@types/jsonwebtoken": "^9.0.1",
     "@types/mime-types": "^2.1.1",
     "@types/multer": "^1.4.7",
+    "@types/nodemailer": "^6.4.15",
     "@types/uuid": "^9.0.1",
     "@types/ws": "^8.5.10",
     "@typescript-eslint/eslint-plugin": "^5.55.0",
