add password reset

--- a/.env.template
+++ b/.env.template
@@ -30,6 +30,26 @@ REFRESH_TOKEN_SECRET=refresh_token_dummy
 # expiration timeout (seconds) for the JWT refresh token
 REFRESH_TOKEN_EXPIRATION=86400
 
+# <--- E-MAIL --->
+# host of smtp server
+SMTP_HOST=127.0.0.1
+# port of smtp server
+SMTP_PORT=587
+# secure smtp server
+SMTP_SECURE=false
+# use tls for smtp
+SMTP_TLS=true
+# smtp user
+SMTP_USER=test@local.test
+# smtp password
+SMTP_PASSWORD=password
+# default e-mail sender
+SMTP_SENDER=test@local.test
+# title (heading) for e-mails
+EMAIL_TITLE="Dummy Title"
+# link for password reset - $passwordRequestId gets replaced by passwordRequestId
+EMAIL_PASSWORD_RESET_LINK="http://127.0.0.1/reset-password/$passwordRequestId"
+
 # <--- PAGING --->
 # max elements allowed to return for GET requests (if paging used)
 MAX_PER_PAGE=30
