--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "npm run clean && tsc && node build/app.js",
     "dev": "nodemon --unhandled-rejections=strict",
     "debug": "export DEBUG=* && npm run dev",
-    "build": "npm run clean && tsc",
+    "copy-files": "copyfiles -u 1 email/templates/html/*.html build/email",
+    "build": "npm run clean && tsc && npm run copy-files",
     "clean": "rimraf ./build",
     "lint": "eslint .",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -15,7 +16,6 @@
   "author": "nils.krtm",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.299.0",
-    "@react-email/render": "^0.0.15",
     "argon2": "^0.30.3",
     "cors": "^2.8.5",
     "debug": "^4.3.4",
