add password reset

--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "",
   "main": "app.ts",
   "scripts": {
-    "start": "npm run clean && tsc && node build/app.js",
+    "start": "npm run clean && tsc && npm run copy-files && node build/app.js",
     "dev": "nodemon --unhandled-rejections=strict",
     "debug": "export DEBUG=* && npm run dev",
-    "copy-files": "copyfiles -u 1 email/templates/html/*.html build/email",
+    "copy-files": "copyfiles -u 1 \"src/emails/templates/html/*.html\" \"build/src/\"",
     "build": "npm run clean && tsc && npm run copy-files",
     "clean": "rimraf ./build",
     "lint": "eslint .",
@@ -46,6 +46,7 @@
     "@types/ws": "^8.5.10",
     "@typescript-eslint/eslint-plugin": "^5.55.0",
     "@typescript-eslint/parser": "^5.55.0",
+    "copyfiles": "^2.4.1",
     "eslint": "^8.36.0",
     "eslint-config-prettier": "^8.7.0",
     "eslint-plugin-prettier": "^4.2.1",
