--- a/deployment/docker/compose/docker-compose.yml
+++ b/deployment/docker/compose/docker-compose.yml
@@ -20,6 +20,9 @@ services:
     restart: always
     ports:
       - "5000:80"
+    environment:
+      DEBUG_COLORS: true
+      DEBUG_FD: 1
     volumes:
       # IMPORTANT: database host needs to be 'mongo' to connect to dockerized MongoDB
       - ../../../.env:/home/www/node/build/.env:ro
