improve logging in docker

--- a/deployment/docker/compose/docker-compose.yml
+++ b/deployment/docker/compose/docker-compose.yml
@@ -21,7 +21,9 @@ services:
     ports:
       - "5000:80"
     environment:
+      # enable colors for logging (debug package)
       DEBUG_COLORS: true
+      # forward logging to stdout (debug package)
       DEBUG_FD: 1
     volumes:
       # IMPORTANT: database host needs to be 'mongo' to connect to dockerized MongoDB
