--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "nodemon": "^3.1.3",
     "prettier": "^2.8.4",
     "rimraf": "^5.0.7",
+    "supports-color": "^9.4.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
   },
