fix spelling mistake

--- a/.env.example
+++ b/.env.example
@@ -17,7 +17,7 @@ DATABASE_HOST=127.0.0.1
 DATABASE_PORT=27017
 # user of for the database
 DATABASE_USER=test-user
-# password for the databse user
+# password for the database user
 DATABASE_PASSWORD=password
 
 # <--- AUTHENTICATION --->
