fix spelling mistake

--- a/.env.example
+++ b/.env.example
@@ -66,4 +66,4 @@ AWS_SECRET_ACCESS_KEY=
 # aws bucket name
 AWS_BUCKET_NAME=
 # allowed mimetypes for the S3 bucket (normally pictures only)
-ALLOWED_MIME_TYPES=image/png;image/jpeg
+ALLOWED_MIME_TYPES="image/png;image/jpeg"
