--- a/.env.example
+++ b/.env.example
@@ -18,7 +18,7 @@ DATABASE_PORT=27017
 # user of for the database
 DATABASE_USER=test-user
 # password for the database user
-DATABASE_PASSWORD=password
+DATABASE_PASSWORD=admin
 
 # <--- AUTHENTICATION --->
 # secret for JWT access token
