--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "outDir": "./build",
     "strict": true,
     "esModuleInterop": true,
+    "experimentalDecorators": true,
     "moduleResolution": "node",
     "jsx": "react"
   },
