--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "copy:env": "copyfiles .env build/",
     "clean": "rimraf ./build",
     "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
@@ -25,7 +26,7 @@
     "express": "^4.21.0",
     "express-validator": "^7.2.0",
     "express-winston": "^4.2.0",
-    "helmet": "^6.0.1",
+    "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "mime-types": "^2.1.35",
     "mongoose": "^7.3.3",
@@ -37,6 +38,10 @@
     "ws": "^8.18.0"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.1.0",
+    "@eslint/js": "^9.11.1",
+    "@stylistic/eslint-plugin-js": "^2.8.0",
+    "@stylistic/eslint-plugin-ts": "^2.8.0",
     "@types/cors": "^2.8.17",
     "@types/debug": "^4.1.12",
     "@types/express": "^4.17.21",
@@ -46,20 +51,21 @@
     "@types/nodemailer": "^6.4.16",
     "@types/uuid": "^10.0.0",
     "@types/ws": "^8.5.12",
-    "@typescript-eslint/eslint-plugin": "^5.55.0",
-    "@typescript-eslint/parser": "^5.55.0",
+    "@typescript-eslint/eslint-plugin": "^8.7.0",
+    "@typescript-eslint/parser": "^8.7.0",
     "copyfiles": "^2.4.1",
-    "eslint": "^8.36.0",
-    "eslint-config-prettier": "^8.7.0",
-    "eslint-plugin-prettier": "^4.2.1",
+    "eslint": "^9.11.1",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "globals": "^15.9.0",
     "nodemon": "^3.1.7",
-    "prettier": "^2.8.4",
-    "rimraf": "^5.0.7",
+    "prettier": "^3.3.3",
+    "rimraf": "^6.0.1",
     "supports-color": "^9.4.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.4.5"
+    "typescript": "^5.6.2"
   },
   "engines": {
-    "node": ">=18.0.0"
+    "node": ">=20.9.0"
   }
 }
